--- a/app/views/students/search_results.rhtml
+++ b/app/views/students/search_results.rhtml
@@ -8,71 +8,71 @@
   <h4 class="pull-right" style="padding-right: 16px;">Search Term: <b><%= @search_term %></b></h4>
   <h4 style="padding-left: 16px;"><span class="label label-success"><%= @books.count %></span> Results Found</h4>
 
-<% unless @books_by_title.blank? %>
-  <div class="panel panel-default" >
-    <p class="panel-heading"><b>Search results based on book title <span class="label label-success"><%= @books_by_title.count %></span></b></p>
-    <div class="panel-body">
-      <ul class="list-group">
-        <% @books_by_title.each do |book| %>
-          <li class="list-group-item">
-            <div class="media">
-              <a href="#" class="pull-left">
-                <% cover_location = "#{book.book_id}_cover_#{book.cover_photo_file_name}" %>
-                <img class="media-object thumb-sm" src="/books/<%= cover_location %>"/>
-              </a>
-              <div class="media-body">
-                <p class="text-sm pull-right muted">Uploaded on <%= book.created_at.to_date.strftime("%d-%b-%Y") %></p>
-                <p class="media-heading">
-                  Book title: <a href="#"><%= book.title %></a><br />
-                  Authors: <a href="#"><%= book.author %></a></p>
-                <p>Subscribed By: <span class="label label-success"><%= book.users.count %></span></p>
-                <button onclick="viewBook('<%= book.book_id %>', '<%= book.title %>', '<%= book.author %>')" class="btn btn-default"><i class="fa fa-eye"></i> Browse Book</button>
-                <% if @user.has_book?(book) %>
-                  <button class="btn pull-right btn-default disabled"><i class="fa fa-plus"></i> Add To my Bookshelf</button>
-                <% else %>
-                  <button onclick="selectBookConfirm('<%= book.book_id %>')" class="btn pull-right btn-default"><i class="fa fa-plus"></i> Add To my Bookshelf</button>
-                <% end %>
+  <% unless @books_by_title.blank? %>
+    <div class="panel panel-default" >
+      <p class="panel-heading"><b>Search results based on book title <span class="label label-success"><%= @books_by_title.count %></span></b></p>
+      <div class="panel-body">
+        <ul class="list-group">
+          <% @books_by_title.each do |book| %>
+            <li class="list-group-item">
+              <div class="media">
+                <a href="#" class="pull-left">
+                  <% cover_location = "#{book.book_id}_cover_#{book.cover_photo_file_name}" %>
+                  <img class="media-object thumb-sm" src="/books/<%= cover_location %>"/>
+                </a>
+                <div class="media-body">
+                  <p class="text-sm pull-right muted">Uploaded on <%= book.created_at.to_date.strftime("%d-%b-%Y") %></p>
+                  <p class="media-heading">
+                    Book title: <a href="#"><%= book.title %></a><br />
+                    Authors: <a href="#"><%= book.author %></a></p>
+                  <p>Subscribed By: <span class="label label-success"><%= book.users.count %></span></p>
+                  <button style="width: 80px; color: green; border-radius: 10px;" onclick="viewBook('<%= book.book_id %>', '<%= book.title %>', '<%= book.author %>')" class="btn btn-default">Read</button>
+                  <% if @user.has_book?(book) %>
+                    <button class="btn pull-right btn-default disabled"><i class="fa fa-plus"></i> Add To my Bookshelf</button>
+                  <% else %>
+                    <button onclick="selectBookConfirm('<%= book.book_id %>')" class="btn pull-right btn-default"><i class="fa fa-plus"></i> Add To my Bookshelf</button>
+                  <% end %>
+                </div>
               </div>
-            </div>
-          </li>
-        <% end %>
-      </ul>
+            </li>
+          <% end %>
+        </ul>
+      </div>
     </div>
-  </div>
-<% end %>
+  <% end %>
 
-<% unless @books_by_authors.blank? %>
-  <div class="panel panel-default">
-    <p class="panel-heading"><b>Search results based on book author <span class="label label-success"><%= @books_by_authors.count %></span></b></p>
-    <div class="panel-body">
-      <ul class="list-group">
-        <% @books_by_authors.each do |book| %>
-          <li class="list-group-item">
-            <div class="media">
-              <a href="#" class="pull-left">
-                <% cover_location = "#{book.book_id}_cover_#{book.cover_photo_file_name}" %>
-                <img class="media-object thumb-sm" src="/books/<%= cover_location %>"/>
-              </a>
-              <div class="media-body">
-                <p class="text-sm pull-right muted">Uploaded on <%= book.created_at.to_date.strftime("%d-%b-%Y") %></p>
-                <p class="media-heading">
-                  Book title: <a href="#"><%= book.title %></a><br />
-                  Authors: <a href="#"><%= book.author %></a></p>
-                <p>Subscribed By: <span class="label label-success"><%= book.users.count %></span></p>
-                <button onclick="viewBook('<%= book.book_id %>', '<%= book.title %>', '<%= book.author %>')" class="btn btn-default"><i class="fa fa-eye"></i> Browse Book</button>
-                <% if @user.has_book?(book) %>
-                  <button class="btn pull-right btn-default disabled"><i class="fa fa-plus"></i> Add To my Bookshelf</button>
-                <% else %>
-                  <button onclick="selectBookConfirm('<%= book.book_id %>')" class="btn pull-right btn-default"><i class="fa fa-plus"></i> Add To my Bookshelf</button>
-                <% end %>
+  <% unless @books_by_authors.blank? %>
+    <div class="panel panel-default">
+      <p class="panel-heading"><b>Search results based on book author <span class="label label-success"><%= @books_by_authors.count %></span></b></p>
+      <div class="panel-body">
+        <ul class="list-group">
+          <% @books_by_authors.each do |book| %>
+            <li class="list-group-item">
+              <div class="media">
+                <a href="#" class="pull-left">
+                  <% cover_location = "#{book.book_id}_cover_#{book.cover_photo_file_name}" %>
+                  <img class="media-object thumb-sm" src="/books/<%= cover_location %>"/>
+                </a>
+                <div class="media-body">
+                  <p class="text-sm pull-right muted">Uploaded on <%= book.created_at.to_date.strftime("%d-%b-%Y") %></p>
+                  <p class="media-heading">
+                    Book title: <a href="#"><%= book.title %></a><br />
+                    Authors: <a href="#"><%= book.author %></a></p>
+                  <p>Subscribed By: <span class="label label-success"><%= book.users.count %></span></p>
+                  <button style="width: 80px; color: green; border-radius: 10px;" onclick="viewBook('<%= book.book_id %>', '<%= book.title %>', '<%= book.author %>')" class="btn btn-default"><i class="fa fa-eye"></i> Read</button>
+                  <% if @user.has_book?(book) %>
+                    <button class="btn pull-right btn-default disabled"><i class="fa fa-plus"></i> Add To my Bookshelf</button>
+                  <% else %>
+                    <button onclick="selectBookConfirm('<%= book.book_id %>')" class="btn pull-right btn-default"><i class="fa fa-plus"></i> Add To my Bookshelf</button>
+                  <% end %>
+                </div>
               </div>
-            </div>
-          </li>
-        <% end %>
-      </ul>
+            </li>
+          <% end %>
+        </ul>
+      </div>
     </div>
-  </div>
-<% end %>
+  <% end %>
 </div>
 <!-- Modal -->
 <div class="modal fade" id="selectBookModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
@@ -97,7 +97,7 @@
 <!-- /.modal -->
 
 <div class="col-lg-12">
-  <div class="modal fade" id="viewBook" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" data-backdrop="static">
+  <div oncontextmenu="return false" class="modal fade" id="viewBook" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" data-backdrop="static">
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
@@ -106,7 +106,7 @@
         </div>
         <div class="modal-body">
           &nbsp;
-          <iframe  width="100%" height="1000px" src=""></iframe>
+          <iframe id="book-iframe" width="100%" height="1000px" src=""></iframe>
         </div>
         <!--<div class="modal-footer">
           <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -168,7 +168,8 @@
   function viewBook(bookID, bookTitle, bookAuthor){
     document.getElementById('book-title').innerHTML = bookTitle + ' By ' + bookAuthor;
     iframe = document.getElementsByTagName('iframe')[0];
-    iframe.src = '/books/' + bookID + '.pdf'
+    src = "http://<%= request.env["HTTP_HOST"] %>/pdfjs/web/viewer.html?file=http://<%= request.env["HTTP_HOST"] %>" + '/books/' + bookID + '.pdf';
+    iframe.src = src//'/books/' + bookID + '.pdf'
     jQuery('#viewBook').modal('show');
   }
 
