--- a/app/views/layouts/students.rhtml
+++ b/app/views/layouts/students.rhtml
@@ -230,7 +230,7 @@
     body{
       transform: scale(1);
     }
-    
+
   </style>
 
 
@@ -500,12 +500,6 @@
             </div>
           </div>
         </div>
-
-        <footer>
-          <hr />
-
-          <p style="text-align: center;">© <%= Date.today.year %> <a href="#">Agoogoo</a></p>
-        </footer>
       </div>
 
 
@@ -630,6 +624,11 @@
         </div>
       </div>
     </div>
+  </div>
+
+  <div class="row">
+    <hr />
+    <p style="text-align: center;">© <%= Date.today.year %> <a href="#">Agoogoo</a></p>
   </div>
 
   <script src="/AircraftAdminFree/lib/bootstrap/js/bootstrap.js"></script>
