--- a/app/views/students/dashboard.rhtml
+++ b/app/views/students/dashboard.rhtml
@@ -37,7 +37,8 @@
   }
 
   body{
-    overflow: hidden;
+    /*overflow: hidden;*/
+    overflow-x: hidden;
   }
 </style>
 <div class="panel panel-default" style="min-height: 540px">
