--- a/app/views/students/search_results.rhtml
+++ b/app/views/students/search_results.rhtml
@@ -2,6 +2,11 @@
   .panel-body .btn:not(.btn-block) {
     width: 170px;
   }
+
+  body{
+    /*overflow: hidden;*/
+    overflow-x: hidden;
+  }
 </style>
 
 <div class="row" style="min-height: 500px">
