--- a/app/views/students/select_books_from_store.rhtml
+++ b/app/views/students/select_books_from_store.rhtml
@@ -24,7 +24,8 @@
   }
 
   body{
-    overflow: hidden;
+    /*overflow: hidden;*/
+    overflow-x: hidden;
   }
 
   .primary, .secondary, .tertiary, .readers, .posters, .catalogs{
