--- a/app/views/users/login.rhtml
+++ b/app/views/users/login.rhtml
@@ -200,6 +200,11 @@
   body{
     background-color: #ddd;
   }
+
+  .modal-dialog {
+    z-index: 999;
+  }
+  
 </style>
 
 <script type="text/javascript">
