--- a/app/views/students/dashboard.rhtml
+++ b/app/views/students/dashboard.rhtml
@@ -259,7 +259,8 @@
         </div>
         <div class="modal-body">
           &nbsp;
-          <iframe  id="book-iframe" width="100%" height="1000px" src=""></iframe>
+          <!--<iframe  id="book-iframe" width="100%" height="1000px" src=""></iframe> -->
+          <script type="text/javascript" src="/javascripts/book-if.js"></script>
         </div>
         <!--<div class="modal-footer">
           <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
