Space between <tr> tag

--- a/app/views/students/select_books_from_store.rhtml
+++ b/app/views/students/select_books_from_store.rhtml
@@ -83,6 +83,9 @@
                 </td>
               <% end %>
             </tr>
+            <tr style="line-height: 25px;">
+              <td>&nbsp;</td>
+            </tr>
           <% end %>
         </table>
       </div>
@@ -115,6 +118,9 @@
                   </div>
                 </td>
               <% end %>
+            </tr>
+            <tr style="line-height: 25px;">
+              <td>&nbsp;</td>
             </tr>
           <% end %>
         </table>
@@ -149,6 +155,9 @@
                 </td>
               <% end %>
             </tr>
+            <tr style="line-height: 25px;">
+              <td>&nbsp;</td>
+            </tr>
           <% end %>
         </table>
       </div>
@@ -181,6 +190,9 @@
                 </td>
               <% end %>
             </tr>
+            <tr style="line-height: 25px;">
+              <td>&nbsp;</td>
+            </tr>
           <% end %>
         </table>
       </div>
@@ -209,6 +221,9 @@
                 </td>
               <% end %>
             </tr>
+            <tr style="line-height: 25px;">
+              <td>&nbsp;</td>
+            </tr>
           <% end %>
         </table>
       </div>
@@ -230,12 +245,15 @@
                         Uploaded on <a href="#"><%= poster.created_at.to_date.strftime("%d-%b-%Y") %></a>
                       </p>
 
-                          <!--<button onclick="selectPosterConfirm('<%= poster.poster_id %>')" class="btn btn-primary"><i class="fa fa-thumbs-up "></i> Select</button>-->
+                                          <!--<button onclick="selectPosterConfirm('<%= poster.poster_id %>')" class="btn btn-primary"><i class="fa fa-thumbs-up "></i> Select</button>-->
                       <button onclick="zoomPoster('<%= poster.poster_id %>')" class="btn btn-success"><i class="fa fa-eye"></i> View</button>
                     </div>
                   </div>
                 </td>
               <% end %>
+            </tr>
+            <tr style="line-height: 25px;">
+              <td>&nbsp;</td>
             </tr>
           <% end %>
         </table>
